# pyread_eagle

./: .gitignore  README.md  pyproject.toml  read_eagle_py.py  setup.py
.eggs/Paste-3.2.2-py3.6.egg/EGG-INFO/: PKG-INFO  RECORD  requires.txt
.github/workflows/: python-publish.yml
pyread_eagle/: .flake8  __init__.py  _pyread_eagle.py
tests/: test_regions.py
