[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyread_eagle"
version = "1.0.2"
authors = [
  { name="Kyle Oman", email="kyle.a.oman@durham.ac.uk" },
]
description = "Pure-python port of J. Helly's read_eagle."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "h5py",
]

[project.urls]
"Homepage" = "https://github.com/kyleaoman/pyread_eagle"
"Bug Tracker" = "https://github.com/kyleaoman/pyread_eagle/issues"